feat: enable serving static files from classpath or fs (#62)